2003-11-07  Carlo Wood  <carlo@alinoe.com>

	PR libstdc++/12736
	* bits/demangle.h (qualifier_list<Allocator>::decode_KVrA): Added.
	(qualifier_list<Allocator>::decode_qualifiers): Collect concatenated
	K, V, r and A qualifiers before processing them as a group.
	* testsuite/demangle/abi_text/01.cc: Reordered CV-qualifiers.
	* testsuite/demangle/regression/cw-16.cc: New.

2003-11-07  Robert Millan  <robertmh@gnu.org>

        * configure.host: Add kfreebsd*-gnu and knetbsd*-gnu.
        * crossconfig.m4: Likewise.
        * configure: Regenerate.

2003-11-07  Carlo Wood  <carlo@alinoe.com>

        * include/bits/demangle.h
        (qualifier_list<Allocator>::decode_qualifiers(string_type&,
        string_type&, bool member_function_pointer_qualifiers):
        Always seperate the '[' of an array type with a space from
        what is left of it, except when that is the closing bracket
        of another array dimension.

2003-11-07  Carlo Wood  <carlo@alinoe.com>

        * include/bits/demangle.h
	(qualifier_list<Allocator>::decode_qualifiers(string_type&,
	string_type&, bool) const): Made const.
	(qualifier_list<Allocator>::M_printing_suppressed): Added mutable.
	(_GLIBCXX_DEMANGLER_DOUT_ENTERING3, _GLIBCXX_DEMANGLER_RETURN3,
	std::ostream& operator<<(std::ostream&, qualifier const&),
	std::ostream& operator<<(std::ostream&, qualifier_list const&),
	qualifier_list<Allocator>::decode_qualifiers(string_type&,
	string_type&, bool) const,
	session<Allocator>::decode_type_with_postfix(string_type&,
	string_type&, qualifier_list<Allocator>*))
	Added and/or changed debug-only hooks and code.

2003-11-04  Jeffrey D. Oldham  <oldham@codesourcery.com>

	* libsupc++/vec.cc (__cxa_vec_delete2): If given a NULL pointer,
	immediately return.  This reflects a C++ ABI change 2003 Nov 03.
	(__cxa_vec_delete3): Likewise.
	
2003-11-03  Petur Runolfsson  <peturr02@ru.is>

	PR libstdc++/12790
	* include/bits/fstream.tcc: Delete _M_last_overflowed.